--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/checkbox/styles/checkbox.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/checkbox/styles/checkbox.scss
@@ -1,14 +1,21 @@
 @import '../../../../../../../../../index';
 
-.checkbox-group {
+.form-checkbox-group {
+    background-color: $fa-color-blue-light;
+    border: none;
+    border-radius: 10px;
+    box-shadow: none;
     align-items: center;
     display: flex;
     gap: 20px;
     margin-bottom: 10px;
     text-align: left;
+    padding: 7px 7px 7px 12px;
+    width: 430px;
+    min-height: 35px;
 
     &__options-container {
-        width: 430px;
+        min-width: 100px;
     }
 
     &__checkbox {
@@ -24,6 +31,7 @@
         display: flex;
         gap: 10px;
         justify-content: center;
+        align-items: center;
 
         &__input-line {
             position: relative;
