--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/select/styles/select.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/select/styles/select.scss
@@ -1,73 +1,25 @@
 @import '../../../../../../../../../index';
 
-.select-group {
+.form-select-group {
     background-color: $fa-color-blue-light;
     border: none;
     border-radius: 10px;
     box-shadow: none;
     color: $fa-color-white-primary;
     display: flex;
-    font-size: 14px;
-    font-style: italic;
-    height: 39px;
+    font-size: 15px;
+    height: 35px;
     margin-bottom: 10px;
     outline: none;
-    padding: 7px;
+    padding: 7px 7px 7px 12px;
     width: 430px;
 
-    &__options-container {
-        width: 430px;
+    &::placeholder {
+        color: $fa-color-gray-light;
     }
 
-    &__label {
-        cursor: pointer;
-        display: flex;
-        gap: 10px;
-        justify-content: center;
-
-        &__input-line {
-            position: relative;
-        }
-
-        &__line {
-            background: $fa-color-cyan-primary;
-            bottom: 0;
-            height: 1px;
-            left: 50%;
-            position: absolute;
-            transform: translateX(-50%);
-            transition: 0.3s all ease;
-            width: 0;
-        }
-
-        &__input-text {
-            background-color: $fa-color-blue-dark;
-            border: none;
-            border-bottom: 1px solid $fa-color-gray-lighter;
-            border-radius: 0;
-            box-shadow: none;
-            color: $fa-color-white-primary;
-            font-size: 15px;
-            outline: none;
-            padding: 7px;
-            width: 370px;
-
-            &--add {
-                font-style: italic;
-            }
-
-            &:focus {
-                border-bottom: 1px solid $fa-color-blue-dark;
-            }
-
-            &:focus + .select-group__label__line {
-                width: 100%;
-            }
-        }
+    &:focus {
+        border-bottom: 1px solid $fa-color-cyan-primary;
     }
 
-    &__icon {
-        cursor: pointer;
-        margin-bottom: 10px;
-    }
 }
