--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/email-input/styles/email-input.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/email-input/styles/email-input.scss
@@ -1,24 +1,45 @@
 @import '../../../../../../../../../index';
 
-.form-email-input {
-    background-color: $fa-color-blue-light;
-    border: none;
-    border-radius: 10px;
-    box-shadow: none;
-    color: $fa-color-white-primary;
+.form-use-case-email-input {
     display: flex;
-    font-size: 15px;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     margin-bottom: 10px;
-    outline: none;
-    padding: 7px 7px 7px 12px;
-    width: 430px;
-    height: 32px;
 
-    &::placeholder {
-        color: $fa-color-gray-light;
+    &__line {
+        background: $fa-color-cyan-primary;
+        height: 1px;
+        transform: translateX(0%);
+        transition: 0.3s all ease;
+        width: 0;
+        max-width: 450px;
     }
 
-    &:focus {
-        border-bottom: 1px solid $fa-color-cyan-primary;
+    &__text {
+        background-color: $fa-color-blue-light;
+        border: none;
+        border-bottom: 1px solid $fa-color-gray-lighter;
+        border-radius: 0;
+        box-shadow: none;
+        color: $fa-color-white-primary;
+        font-size: 15px;
+        outline: none;
+        padding: 7px 7px 7px 12px;
+        width: 100%;
+        height:35px;
+        max-width: 450px;
+
+        &:focus {
+            border-bottom: 1px solid $fa-color-blue-light;
+        }
+
+        &:focus + .form-use-case-email-input__line {
+            width: 100%;
+        }
+
+        &::placeholder {
+            color: $fa-color-gray-lighter;
+        }
     }
 }
