--- a/packages/forms-web/src/pages/user-forms/ui/styles/form.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/form.scss
@@ -47,15 +47,34 @@
 
   &__arrow-up {
     rotate: 180deg;
-    margin-right: 20px;
+    margin: 0 6px 0 20px;
   }
 
   &__arrow-down {
-    margin-right: 20px;
+    margin: 0 6px 0 20px;
   }
 
-  &__arrow-up-right {
-    margin-right: 20px;
+  &__actions-container {
+    display: flex;
+    align-items: center;
+  }
+
+  &__action-button {
+    background-color: #0DD4C4;
+    color: #313131;
+    font-size: 16px;
+    width: 170px;
+    height: 35px;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    margin: 0 8px;
+
+    &:disabled {
+      opacity: 0.4;
+      cursor: none;
+    }
   }
 
   @media screen and (max-width: 455px) {
