--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/options/styles/delete.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/options/styles/delete.scss
@@ -1,9 +1,9 @@
 @import '../../../../../../../../index';
 
 .delete {
-    left: 50%;
-    margin-left: -60px;
-    top: 150%;
+    cursor: pointer;
+    background-color: initial;
+    border: none;
 
     &:hover .delete__text {
         visibility: visible;
@@ -22,7 +22,7 @@
         visibility: hidden;
         width: 60px;
         z-index: 10;
-    
+
         &:after {
             border-style: solid;
             border-width: 5px;
@@ -40,7 +40,7 @@
 
     &__icon {
         fill: transparent;
-        
+
         &:hover {
             stroke: $fa-color-white-primary;
         }
