--- a/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-area.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-area.scss
@@ -10,7 +10,7 @@
     &__field-container {
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         justify-content: left;
         padding: 16px;
         width: 100%;
